--- a/index.html
+++ b/index.html
@@ -220,13 +220,11 @@
                 <div class="row pb-4">
                     <div class="text col-lg-6 col-md-6 col-sm-6 col-xs-6 ">
                         <h1 class="project-heading mt-2 mb-5">Tick-Cross Game</h1>
-                        You all are well aware with this game,so I don't need to tell you about it.It's just that, it is
-                        a
-                        very basic game made using pure C++.To know more about it or play the game,click the below
+                        This is a grade Calculator.You just have to enter marks of four subjects and you will get your grade and your percentage.<br>To Calculate,click the below
                         button..
                         <br>
                         <button class="btn btn-secondary mt-2"
-                            onclick="window.open('https://vngarg.github.io/Tick-Cross-Game/')">CLICK HERE</button>
+                            onclick="window.open('https://vngarg.github.io/Grade-Calculator/')">CLICK HERE</button>
                     </div>
                     <div class="img w-50 col-lg-6 col-md-6 col-sm-6 col-xs-6">
                         <div class="card shadow-lg">
