--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <div class="row mb-1">
                 <div class="text col-lg-6 col-md-6 col-sm-6 col-xs-6">
                     <h1 class="project-heading mt-2 mb-5">Digital Clock</h1>
-                    This is a 12 hour clock which displays the current time in digital form.This project is made using
+                    This is a 12 hour clock which displays the current time in digital form.It will display thetime according to your device's time.So keep your device up to date.This project is made using
                     HTML,CSS and Javascript.To check the time click the below button..
                     <br>
                     <button class="btn btn-secondary mt-4"
@@ -219,12 +219,11 @@
             <a name="Game">
                 <div class="row pb-4">
                     <div class="text col-lg-6 col-md-6 col-sm-6 col-xs-6 ">
-                        <h1 class="project-heading mt-2 mb-5">Tick-Cross Game</h1>
-                        This is a grade Calculator.You just have to enter marks of four subjects and you will get your grade and your percentage.<br>To Calculate,click the below
-                        button..
+                        <h1 class="project-heading mt-2 mb-5">Countdown Clock</h1>
+                        This is a Countdown Clock.It will tell you the time till 06-06-2030..To see the clock,click thebutton below
                         <br>
                         <button class="btn btn-secondary mt-2"
-                            onclick="window.open('https://vngarg.github.io/Grade-Calculator/')">CLICK HERE</button>
+                            onclick="window.open('https://vngarg.github.io/CountdownClock/')">CLICK HERE</button>
                     </div>
                     <div class="img w-50 col-lg-6 col-md-6 col-sm-6 col-xs-6">
                         <div class="card shadow-lg">
