--- a/index.html
+++ b/index.html
@@ -150,26 +150,26 @@
                         <div class="row">
                             <div class="col-lg-4">
                                 <div class="row">
-                                    <img src="images/gallery1.jpg" class="fit-image">
+                                    <img src="images/shlok-img1.jpeg" class="fit-image">
                                 </div>
                                 <div class="row">
-                                    <img src="images/gallery2.jpg" class="fit-image">
-                                </div>
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="row">
-                                    <img src="images/gallery3.jpg" class="fit-image">
-                                </div>
-                                <div class="row">
-                                    <img src="images/gallery4.jpg" class="fit-image">
+                                    <img src="images/shlok-img4.jpg" class="fit-image">
                                 </div>
                             </div>
                             <div class="col-lg-4">
                                 <div class="row">
-                                    <img src="images/gallery5.jpg" class="fit-image">
+                                    <img src="images/shlok-img3.jpg" class="fit-image">
                                 </div>
                                 <div class="row">
-                                    <img src="images/gallery6.jpg" class="fit-image">
+                                    <img src="images/shlok-img2.jpg" class="fit-image">
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="row">
+                                    <img src="images/shlok-img5.jpeg" class="fit-image">
+                                </div>
+                                <div class="row">
+                                    <img src="images/shlok-img6.jpg" class="fit-image">
                                 </div>
                             </div>
                         </div>
@@ -227,7 +227,7 @@
                     </div>
                     <div class="img w-50 col-lg-6 col-md-6 col-sm-6 col-xs-6">
                         <div class="card shadow-lg">
-                            <img src="images/project-tick-cross.png" class="card-img img-fluid">
+                            <img src="images/countdown-clock.jpg" class="card-img img-fluid">
                         </div>
                     </div>
                 </div>
