--- a/index.html
+++ b/index.html
@@ -150,26 +150,26 @@
                         <div class="row">
                             <div class="col-lg-4">
                                 <div class="row">
-                                    <img src="images/shlok-img1.jpeg" class="fit-image">
+                                    <img src="images/Shlok-img1.jpeg" class="fit-image">
                                 </div>
                                 <div class="row">
-                                    <img src="images/shlok-img4.jpg" class="fit-image">
-                                </div>
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="row">
-                                    <img src="images/shlok-img3.jpg" class="fit-image">
-                                </div>
-                                <div class="row">
-                                    <img src="images/shlok-img2.jpg" class="fit-image">
+                                    <img src="images/Shlok-img4.jpg" class="fit-image">
                                 </div>
                             </div>
                             <div class="col-lg-4">
                                 <div class="row">
-                                    <img src="images/shlok-img5.jpeg" class="fit-image">
+                                    <img src="images/Shlok-img3.jpg" class="fit-image">
                                 </div>
                                 <div class="row">
-                                    <img src="images/shlok-img6.jpg" class="fit-image">
+                                    <img src="images/Shlok-img2.jpg" class="fit-image">
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="row">
+                                    <img src="images/Shlok-img5.jpeg" class="fit-image">
+                                </div>
+                                <div class="row">
+                                    <img src="images/Shlok-img6.jpg" class="fit-image">
                                 </div>
                             </div>
                         </div>
