Some Changes made

--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
           </div>
           <div class="flex-item image fit round text-center">
             <img src="images/blog_3.png" alt="" />
-            <buttton class="btn btn-secondary mt-4" style="position: relative ; left:22%"><a href="https://drive.google.com/drive/u/0/my-drive" target="_blank" style="color:white !important ; text-decoration: none;" class="smoothscroll">View Resume</a></button>
+            <buttton class="btn btn-secondary mt-4" style="position: relative ; left:22%"><a href="https://drive.google.com/file/d/13Ysty-R8loE1zww6zxBxoOvzm1X4X3EQ/view?usp=sharing" target="_blank" style="color:white !important ; text-decoration: none;" class="smoothscroll">View Resume</a></button>
           </div>
           <div class="flex-item right">
             <div class="mb-5">
