Added Social Links

--- a/index.html
+++ b/index.html
@@ -424,17 +424,17 @@
           <div class="col-md-3 col-lg-3 col-sm-3 col-xs-3 text-center pt-4">
             <ul style="font-size: 1.5rem">
               <li class="nav-item text-center">
-                <a class="social-circle" href="">
+                <a class="social-circle" href="https://www.facebook.com/profile.php?id=100004778597873" target="_blank">
                   <span class="fa fa-facebook" aria-hidden="true"></span>
                 </a>
               </li>
               <li class="nav-item text-center" id="insta">
-                <a class="social-circle" href="">
+                <a class="social-circle" href="https://www.instagram.com/sg_3105/" target="_blank">
                   <span class="fa fa-instagram" aria-hidden="true"></span>
                 </a>
               </li>
               <li class="nav-item text-center" id="linkedin">
-                <a class="social-circle" href="">
+                <a class="social-circle" href="https://www.linkedin.com/in/shlok-garg-0b216b191/" target="_blank">
                   <span class="fa fa-linkedin" aria-hidden="true"></span>
                 </a>
               </li>
