--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       </div>
 
     </header>
+    
     <div class="site-blocks-cover overlay bg-light" id="home-section">
       <div class="container">
         <div class="row justify-content-center">
@@ -80,7 +81,7 @@
           </div>
         </div>
       </div>
-      <img src="images/face.png" alt="Image" class="img-face" data-aos="fade">
+      <img src="images/image-1.png" alt="Image" class="img-face" data-aos="fade">
     </div>
 
     <div class="site-section" id="skills-section">
@@ -94,12 +95,12 @@
             <div class="service d-flex h-100">
               <div class="service-number mr-4"><span class="icon-style"></span></div>
               <div class="service-about">
-                <h3>Skill 1</h3>
+                <h3>JavaScript</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis ipsum error eligendi molestiae
                   eaque quas, ducimus sequi excepturi?</p>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
+                    aria-valuenow="50" aria-valuemin="0" aria-valuemax="" style="width: 100%"></div>
                 </div>
               </div>
             </div>
@@ -109,27 +110,12 @@
             <div class="service d-flex h-100">
               <div class="service-number mr-4"><span class="icon-business_center"></span></div>
               <div class="service-about">
-                <h3>Skill 2</h3>
+                <h3>Reactjs</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis ipsum error eligendi molestiae
                   eaque quas, ducimus sequi excepturi?</p>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 25%"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6 mb-4">
-            <div class="service d-flex h-100">
-              <div class="service-number mr-4"><span class="icon-desktop_windows"></span></div>
-              <div class="service-about">
-                <h3>Skill 3</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis ipsum error eligendi molestiae
-                  eaque quas, ducimus sequi excepturi?</p>
-                <div class="progress">
-                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                    aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
                 </div>
               </div>
             </div>
@@ -139,12 +125,27 @@
             <div class="service d-flex h-100">
               <div class="service-number mr-4"><span class="icon-layers"></span></div>
               <div class="service-about">
-                <h3>Skill 4</h3>
+                <h3>Nodejs</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis ipsum error eligendi molestiae
                   eaque quas, ducimus sequi excepturi?</p>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="50" style="width: 50%"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 mb-4">
+            <div class="service d-flex h-100">
+              <div class="service-number mr-4"><span class="icon-desktop_windows"></span></div>
+              <div class="service-about">
+                <h3>BootStrap</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis ipsum error eligendi molestiae
+                  eaque quas, ducimus sequi excepturi?</p>
+                <div class="progress">
+                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="50" style="width: 100%"></div>
                 </div>
               </div>
             </div>
@@ -162,7 +163,7 @@
           </div>
           <div class="col-lg-4 order-1 order-lg-2 mb-4 mb-lg-0">
             <div class="bg-light">
-              <img src="images/blog_2.png" class="img-fluid">
+              <img src="images/image-2.jpg" class="img-fluid" style="border-radius: 40px;">
             </div>
           </div>
           <div class="col-lg-4 order-2 order-lg-1">
@@ -330,25 +331,25 @@
           <div class="flex-item left">
             <div class="mb-5">
               <h3>Lower Education</h3>
-              <p>Morbi in sem quis dui plalorem ipsum<br /> euismod in, pharetra sed ultricies.</p>
+              <p>Completed my Lower Education from <b>Meerut Public School</b>, Meerut U.P.<br>Achieved 10CGPA in class 10<sup>th</sup> and 95.2% in class 12<sup>th</sup>.</p>
             </div>
             <div>
               <h3>Under Graduation</h3>
-              <p>Tristique yonve cursus jam nulla quam<br /> loreipsu gravida adipiscing lorem</p>
+              <p>I am currently pursuing <b>B.Tech</b> in Computer Science from Guru Gobind Singh Indraprastha University, Dwarka New Delhi.</p>
             </div>
           </div>
           <div class="flex-item image fit round text-center">
-            <img src="images/blog_3.png" alt="" />
+            <img src="images/image-2.jpg" alt="" />
             <buttton class="btn btn-secondary mt-4" style="position: relative ; left:22%"><a href="https://drive.google.com/file/d/13Ysty-R8loE1zww6zxBxoOvzm1X4X3EQ/view?usp=sharing" target="_blank" style="color:white !important ; text-decoration: none;" class="smoothscroll">View Resume</a></button>
           </div>
           <div class="flex-item right">
             <div class="mb-5">
               <h3>Expertise</h3>
-              <p>Sed adipiscing ornare risus. Morbi estes<br /> blandit sit et amet, sagittis magna.</p>
+              <p>I have an expertise in <b>Front End Web Development</b>. I have worked with HTML, CSS, Reactjs, Javascript, Bootstrap and JQuery and a little bit of knowledge in Back End Technology.</p>
             </div>
             <div>
               <h3>Hobbies</h3>
-              <p>Pellentesque egestas sem. Suspendisse<br /> modo ullamcorper feugiat lorem.</p>
+              <p>I love to read <b>Novels</b>, watch <b>Cricket</b>, movies and Web Series.</p>
             </div>
           </div>
         </div>
@@ -405,8 +406,9 @@
         <div class="row">
           <div class="text-center col-md-3 col-lg-3 col-sm-3 col-xs-3">
             <h3 class="footer-title">Address</h3>
-            <p><span class="d-inline-block d-md-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <p><span class="d-inline-block d-md-block">Guru Gobind Singh Indraprastha University</span>
+              <span class="d-inline-block d-md-block">Kakrola Road, Dwarka Sec-16C</span>
+              <span class="d-inline-block d-md-block">New Delhi, 110078</span></p>
           </div>
           <div class="col-md-6 col-lg-6 col-sm-6 col-xs-6 mx-auto text-center">
             <div class="row">
@@ -465,7 +467,7 @@
   <script src="js/typed.js"></script>
   <script>
     var typed = new Typed('.element', {
-      strings: ["Hello, Everyone I'm Name ....","I'm a Web Developer living in City...."],
+      strings: ["Hello, Everyone I'm Shlok Garg....","I'm a Web Developer living in New Delhi...."],
       typeSpeed: 28,
       backSpeed: 28,
       loop: true
