--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
               <div class="service-number mr-4"><span class="icon-style"></span></div>
               <div class="service-about">
                 <h3>JavaScript</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis ipsum error eligendi molestiae
-                  eaque quas, ducimus sequi excepturi?</p>
+                <p>
+                  Ih have been with JavaScript since 1 year. During this period I have created projects using just JavaScript some of which are CodePlayer, BreakOut Game. 
+                </p>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
                     aria-valuenow="50" aria-valuemin="0" aria-valuemax="" style="width: 100%"></div>
@@ -111,8 +112,7 @@
               <div class="service-number mr-4"><span class="icon-business_center"></span></div>
               <div class="service-about">
                 <h3>Reactjs</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis ipsum error eligendi molestiae
-                  eaque quas, ducimus sequi excepturi?</p>
+                <p>Learning React is my best decision till now. Using React I had created projects like Github Finder and HamBurger maker.</p>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
                     aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
@@ -126,8 +126,7 @@
               <div class="service-number mr-4"><span class="icon-layers"></span></div>
               <div class="service-about">
                 <h3>Nodejs</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis ipsum error eligendi molestiae
-                  eaque quas, ducimus sequi excepturi?</p>
+                <p>Not much experienced in this domain but loved working on it for 2 months.</p>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="50" style="width: 50%"></div>
@@ -141,8 +140,7 @@
               <div class="service-number mr-4"><span class="icon-desktop_windows"></span></div>
               <div class="service-about">
                 <h3>BootStrap</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis ipsum error eligendi molestiae
-                  eaque quas, ducimus sequi excepturi?</p>
+                <p>All of my projects and the work done till now is made responsive using Bootstrap.</p>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="50" style="width: 100%"></div>
@@ -167,16 +165,12 @@
             </div>
           </div>
           <div class="col-lg-4 order-2 order-lg-1">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis ipsum error eligendi molestiae
-              eaque quas, ducimus sequi excepturi?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis ipsum error eligendi molestiae
-              eaque quas, ducimus sequi excepturi?</p>
+            <p>Hello, everyone I'm Shlok Garg pursuing B.Tech Computer Science from GGSIPU, New Delhi. I am a Full Stack Web Developer working in this domian since past year.</p>
+            <p>I have expertise in FrontEnd Languages such as HTML/CSS , JavaScript , BootStrap , JQuery , Reactjs and little bit experience in BackEnd using Nodejs , Mongodb and Express.</p>
           </div>
           <div class="col-lg-4 order-3 order-lg-3">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis ipsum error eligendi molestiae
-              eaque quas, ducimus sequi excepturi?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aperiam qui maiores, ipsa quibusdam
-              distinctio! Expedita ipsum ex porro obcaecati.</p>
+            <p>I am an avid cricket lover who loves to read novels. Also, I'm the person who loves to movies and Web Series.</p>
+            <p>I'm a very dedicated and hardworking person who loves to work in this domain. When given a task I do it to the full of my capability.</p>
             <buttton class="btn btn-primary"><a href="#contact-section"
                 style="color:white !important ; text-decoration: none;" class="smoothscroll">Contact Me</a></button>
           </div>
