--- a/index.html
+++ b/index.html
@@ -191,118 +191,39 @@
           <div class="portfolio_wrap">
             <div class="single_gallery">
               <div class="thumb">
-                <img src="images/blog_3.png" alt="">
+                <img src="images/Anugoonj.png">
               </div>
               <div class="gallery_hover">
                 <div class="hover_inner">
-                  <span>Project Domain</span>
-                  <a href="#">
-                    <h3>Project Name</h3>
-                  </a>
-
-                </div>
-              </div>
-            </div>
-            <div class="single_gallery small_width">
-              <div class="thumb">
-                <img src="images/blog_1.png" alt="">
-              </div>
-              <div class="gallery_hover">
-                <div class="hover_inner">
-                  <span>Project Domain</span>
-                  <a href="#.html">
-                    <h3>Project Name</h3>
+                  <span>Front End</span>
+                  <a href="https://anugoonj-ipu.com">
+                    <h3>Anugoonj'20</h3>
                   </a>
                 </div>
               </div>
             </div>
             <div class="single_gallery">
               <div class="thumb">
-                <img src="images/slide_thumb_1.png" alt="">
+                <img src="images/Ann Suraksha.png">
               </div>
               <div class="gallery_hover">
                 <div class="hover_inner">
-                  <span>Project Domain</span>
-                  <a href="#.html">
-                    <h3>Project Name</h3>
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class=" single_gallery">
-              <div class="thumb">
-                <img src="images/blog_4.png" alt="">
-              </div>
-              <div class="gallery_hover">
-                <div class="hover_inner">
-                  <span>Project Domain</span>
-                  <a href="#.html">
-                    <h3>Project Name</h3>
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="single_gallery">
-              <div class="thumb">
-                <img src="images/blog_2.png"">
-              </div>
-              <div class="gallery_hover">
-                <div class="hover_inner">
-                  <span>Project Domain</span>
-                  <a href="#.html">
-                    <h3>Project Name</h3>
+                  <span>Full Stack</span>
+                  <a href="https://github.com/ashish1sasmal/SmartIndiaHackathon2020">
+                    <h3>Ann Suraksha</h3>
                   </a>
                 </div>
               </div>
             </div>
             <div class=" single_gallery small_width">
               <div class="thumb">
-                <img src="images/blog_1.png" alt="">
+                <img src="images/BreakOut Game.png">
               </div>
               <div class="gallery_hover">
                 <div class="hover_inner">
-                  <span>Project Domain</span>
-                  <a href="#.html">
-                    <h3>Project Name</h3>
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="single_gallery">
-              <div class="thumb">
-                <img src="images/blog_2.png"">
-              </div>
-              <div class="gallery_hover">
-                <div class="hover_inner">
-                  <span>Project Domain</span>
-                  <a href="#.html">
-                    <h3>Project Name</h3>
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class=" single_gallery small_width">
-              <div class="thumb">
-                <img src="images/slide_thumb_1.png" alt="">
-              </div>
-              <div class="gallery_hover">
-                <div class="hover_inner">
-                  <span>Project Domain</span>
-                  <a href="#.html">
-                    <h3>Project Name</h3>
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class=" single_gallery">
-              <div class="thumb">
-                <img src="images/blog_3.png" alt="">
-              </div>
-              <div class="gallery_hover">
-                <div class="hover_inner">
-                  <span>Project Domain</span>
-                  <a href="#.html">
-                    <h3>Project Name</h3>
+                  <span>JavaScript Game</span>
+                  <a href="https://vngarg.github.io/BrekOut-Game/">
+                    <h3>Break Out Game</h3>
                   </a>
                 </div>
               </div>
